crates/parser/src/snapshots/parser__tests__parse_inline_ok@0058_assume_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "assume A (!claim A)\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0058_assume_ded.ath
---
ASSUME_DED
  ASSUME_KW "assume"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "A"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      NAME_REF
        IDENT "claim"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "A"
    R_PAREN ")"
  WHITESPACE "\n"

