crates/parser/src/snapshots/parser__tests__parse_inline_ok@0060_assume_nested.ath.snap
---
source: crates/parser/src/tests.rs
description: "assume A assume B (!claim A)\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0060_assume_nested.ath
---
ASSUME_DED
  ASSUME_KW "assume"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "A"
  WHITESPACE " "
  ASSUME_DED
    ASSUME_KW "assume"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "B"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        NAME_REF
          IDENT "claim"
      WHITESPACE " "
      IDENT_EXPR
        NAME_REF
          IDENT "A"
      R_PAREN ")"
  WHITESPACE "\n"

