crates/parser/src/snapshots/parser__tests__parse_inline_ok@0064_simple_check_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "check { false => (!claim A)\n     | else => (!claim B)\n}\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0064_simple_check_ded.ath
---
INFIX_CHECK_DED
  CHECK_KW "check"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  CHECK_DED_ARM
    IDENT_EXPR
      NAME_REF
        IDENT "false"
    WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        NAME_REF
          IDENT "claim"
      WHITESPACE " "
      IDENT_EXPR
        NAME_REF
          IDENT "A"
      R_PAREN ")"
  WHITESPACE "\n     "
  CHECK_DED_ARM
    PIPE "|"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "else"
    WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        NAME_REF
          IDENT "claim"
      WHITESPACE " "
      IDENT_EXPR
        NAME_REF
          IDENT "B"
      R_PAREN ")"
  WHITESPACE "\n"
  R_CURLY "}"
  WHITESPACE "\n"

