crates/parser/src/snapshots/parser__tests__parse_inline_ok@0071_pick_witnesses_multiple.ath.snap
---
source: crates/parser/src/tests.rs
description: "pick-witnesses a b c for d (!claim a)\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0071_pick_witnesses_multiple.ath
---
PICK_WITNESSES_DED
  PICK_WITNESSES_KW "pick-witnesses"
  WHITESPACE " "
  NAME
    IDENT "a"
  WHITESPACE " "
  NAME
    IDENT "b"
  WHITESPACE " "
  NAME
    IDENT "c"
  WHITESPACE " "
  FOR_KW "for"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "d"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      NAME_REF
        IDENT "claim"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "a"
    R_PAREN ")"
  WHITESPACE "\n"

