crates/parser/src/snapshots/parser__tests__parse_inline_ok@0076_cases_multiple.ath.snap
---
source: crates/parser/src/tests.rs
description: "datatype-cases a { a => (!claim a) | b => (!claim b) }\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0076_cases_multiple.ath
---
CASES_DED
  DATATYPE_CASES_KW "datatype-cases"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "a"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  RESTRICTED_MATCH_DED
    IDENT_PAT
      NAME
        IDENT "a"
    WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        NAME_REF
          IDENT "claim"
      WHITESPACE " "
      IDENT_EXPR
        NAME_REF
          IDENT "a"
      R_PAREN ")"
  WHITESPACE " "
  RESTRICTED_MATCH_DED
    PIPE "|"
    WHITESPACE " "
    IDENT_PAT
      NAME
        IDENT "b"
    WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        NAME_REF
          IDENT "claim"
      WHITESPACE " "
      IDENT_EXPR
        NAME_REF
          IDENT "b"
      R_PAREN ")"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

