crates/parser/src/snapshots/parser__tests__parse_inline_ok@0076_induct_ded.ath.snap
---
source: crates/parser/src/tests.rs
description: "by-induction foo { a => (!claim a) }\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0076_induct_ded.ath
---
INDUCT_DED
  BY_INDUCTION_KW "by-induction"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "foo"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  RESTRICTED_MATCH_DED
    IDENT_PAT
      NAME
        IDENT "a"
    WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        NAME_REF
          IDENT "claim"
      WHITESPACE " "
      IDENT_EXPR
        NAME_REF
          IDENT "a"
      R_PAREN ")"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"

