crates/parser/src/snapshots/parser__tests__parse_inline_ok@0108_datatypes_stmt_multiple_structures.ath.snap
---
source: crates/parser/src/tests.rs
description: "datatypes Foo := bar && Baz := quz\n"
input_file: crates/parser/test_data/parser/inline/ok/stmt/0108_datatypes_stmt_multiple_structures.ath
---
DATATYPES_STMT
  DATATYPES_KW "datatypes"
  WHITESPACE " "
  STRUCTURE_DEF
    STRUCTURE_NAME_DEF
      IDENT_SORT_DECL
        NAME
          IDENT "Foo"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    CONSTANT_CONSTRUCTOR
      NAME
        IDENT "bar"
  WHITESPACE " "
  AMP2 "&&"
  WHITESPACE " "
  STRUCTURE_DEF
    STRUCTURE_NAME_DEF
      IDENT_SORT_DECL
        NAME
          IDENT "Baz"
    WHITESPACE " "
    COLON_EQ ":="
    WHITESPACE " "
    CONSTANT_CONSTRUCTOR
      NAME
        IDENT "quz"
  WHITESPACE "\n"

