crates/parser/src/snapshots/parser__tests__parse_inline_ok@0117_pick_witnesses_with_ident.ath.snap
---
source: crates/parser/src/tests.rs
description: "pick-witnesses a for b c (!claim a)\n"
input_file: crates/parser/test_data/parser/inline/ok/ded/0117_pick_witnesses_with_ident.ath
---
PICK_WITNESSES_DED
  PICK_WITNESSES_KW "pick-witnesses"
  WHITESPACE " "
  NAME
    IDENT "a"
  WHITESPACE " "
  FOR_KW "for"
  WHITESPACE " "
  IDENT_EXPR
    NAME_REF
      IDENT "b"
  WHITESPACE " "
  NAME
    IDENT "c"
  WHITESPACE " "
  BANG_METHOD_CALL_DED
    L_PAREN "("
    BANG "!"
    IDENT_EXPR
      NAME_REF
        IDENT "claim"
    WHITESPACE " "
    IDENT_EXPR
      NAME_REF
        IDENT "a"
    R_PAREN ")"
  WHITESPACE "\n"

